--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -177,11 +177,11 @@ nav{
     }
 
     .img1 {
-        background-image: url("/Images/inline-kitchen.jpg");
+        background-image: url("../Images/inline-kitchen.jpg");
     }
 
     .img2 {
-        background-image: url("/Images/L-shape.jpg");
+        background-image: url("../Images/L-shape.jpg");
     }
 
     .img3 {
