--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -67,7 +67,7 @@ nav{
         height: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: start;
         flex-direction: column;
         h1{
             font-family: Alata-Regular;
@@ -82,7 +82,6 @@ nav{
         p{
             font-size: 18px;
             font-family: Outfit-Regular;
-            text-align: center;
             color: #fff;
             @media (max-width:774px) {
                 font-size: 16px;
@@ -273,4 +272,58 @@ nav{
         }
         margin: 0 4px;
       }
+}
+
+.pricing{
+    background-color: #f5f5f5;
+    h2{
+        font-family: Alata-Regular;
+        font-size: 32px;
+        text-align: center;
+        
+    }
+    p{
+        font-family: Outfit-Light;
+        font-size: 18px;
+        text-align: center;
+        margin-bottom: 0px;
+    }
+    button{
+        background-color: #ed8e23;
+        padding: 5px 10px;
+        border: none;
+        margin-top: 5px;
+        a{
+            color: #fff;
+            font-family: Outfit-Medium;
+            text-decoration: none;
+        }
+    }
+}
+
+.faq{
+    button{
+        background-color: #f5f5f5;
+    }
+    .accordion-button:not(.collapsed) {
+        background-color: #f5f5f5; 
+    }
+    h2{
+        font-family: Alata-Regular;
+        color: #000;
+        font-size: 32px;
+    }
+    p{
+        font-family: Outfit-Regular;
+        font-size: 18px;
+    }
+}
+
+footer{
+    background-color: #f5f5f5;
+    a{
+        font-family: Oufit-Medium;
+        font-size: 18px;
+
+    }
 }
