--- a/CSS/style.css
+++ b/CSS/style.css
@@ -293,7 +293,7 @@ nav button a {
   font-size: 32px;
 }
 .faq p {
-  font-family: Outfit-Regular;
+  font-family: Outfit-light;
   font-size: 18px;
 }
 
