--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -313,7 +313,7 @@ nav{
         font-size: 32px;
     }
     p{
-        font-family: Outfit-Regular;
+        font-family: Outfit-light;
         font-size: 18px;
     }
 }
