--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -75,7 +75,7 @@ nav{
             color: #ed8e23;
             font-weight: 900;
             @media (max-width:774px) {
-                font-size: 28px;
+                font-size: 36px;
             }
         }
         p{
@@ -83,7 +83,7 @@ nav{
             font-family: Outfit-Regular;
             color: #fff;
             @media (max-width:774px) {
-                font-size: 16px;
+                font-size: 17px;
             }
         }
         button{
@@ -278,13 +278,19 @@ nav{
     h2{
         font-family: Alata-Regular;
         font-size: 32px;
-        text-align: center;
+        text-align: justify;
+        @media (max-width:776px) {
+            font-size: 28px;
+        }
         
     }
     p{
         font-family: Outfit-Light;
         font-size: 18px;
-        text-align: center;
+        @media (max-width:776px) {
+            font-size: 16px;
+        }
+        text-align: justify;
         margin-bottom: 0px;
     }
     button{
