--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,6 +99,7 @@ nav button a {
 
 .about-me {
   background-color: #f5f5f5;
+  overflow: hidden;
 }
 .about-me h6 {
   font-family: Alata-Regular;
@@ -128,6 +129,9 @@ nav button a {
   text-transform: uppercase;
 }
 
+.types {
+  overflow: hidden;
+}
 .types h6 {
   color: #ed8e23;
   font-family: Outfit-Medium;
@@ -215,6 +219,9 @@ nav button a {
   color: #fff;
 }
 
+.gallery {
+  overflow: hidden;
+}
 .gallery h6 {
   color: #ed8e23;
   text-align: center;
