--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -103,6 +103,7 @@ nav{
 
 .about-me{
     background-color: #f5f5f5;
+    overflow: hidden;
     h6{
         font-family: Alata-Regular;
         font-weight: bold;
@@ -134,6 +135,7 @@ nav{
 }
 
 .types{
+    overflow: hidden;
     h6{
         color: #ed8e23;
         font-family: Outfit-Medium;
@@ -231,6 +233,7 @@ nav{
 }
 
 .gallery{
+    overflow: hidden;
     h6{
         color: #ed8e23;
         text-align: center;
