--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,6 +57,11 @@ nav button a {
   background-size: cover;
   height: 600px;
 }
+@media (max-width: 774px) {
+  .banner {
+    height: 410px;
+  }
+}
 .banner .container {
   height: 100%;
   display: flex;
@@ -97,6 +102,13 @@ nav button a {
   text-transform: uppercase;
 }
 
+.ctc-btn {
+  position: fixed;
+  bottom: 10px;
+  z-index: 1;
+  right: 10px;
+}
+
 .about-me {
   background-color: #f5f5f5;
   overflow: hidden;
@@ -127,6 +139,28 @@ nav button a {
   color: white;
   font-family: Outfit-Medium;
   text-transform: uppercase;
+}
+.about-me h4 {
+  font-size: 20px;
+  font-family: Alata-Regular;
+  font-weight: bold;
+}
+.about-me .form-box {
+  background-color: #fff;
+  padding: 40px;
+}
+.about-me .form-box input {
+  border: 1px solid #ed8e23;
+  padding: 7px;
+}
+.about-me .form-box input ::-moz-placeholder {
+  font-family: Outfit-Medium;
+}
+.about-me .form-box input ::placeholder {
+  font-family: Outfit-Medium;
+}
+.about-me .form-box select {
+  border: 1px solid #ed8e23;
 }
 
 .types {
@@ -217,6 +251,11 @@ nav button a {
   background-color: #ed8e23;
   border: none;
   color: #fff;
+}
+.types h5 {
+  font-size: 22px;
+  font-family: Outfit-Medium;
+  text-align: center;
 }
 
 .gallery {
