--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -63,6 +63,9 @@ nav{
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
+    @media (max-width:774px) {
+        height: 410px;
+    }
     .container{
         height: 100%;
         display: flex;
@@ -101,6 +104,13 @@ nav{
     }
 }
 
+.ctc-btn{
+    position: fixed;
+    bottom: 10px;
+    z-index: 1;
+    right: 10px;
+}
+
 .about-me{
     background-color: #f5f5f5;
     overflow: hidden;
@@ -130,6 +140,25 @@ nav{
             color: #ffff;
             font-family: Outfit-Medium;
             text-transform: uppercase;
+        }
+    }
+    h4{
+        font-size: 20px;
+        font-family: Alata-Regular;
+        font-weight: bold;
+    }
+    .form-box{
+        background-color: #fff;
+        padding: 40px;
+        input{
+            border: 1px solid #ed8e23;
+            padding: 7px;
+            ::placeholder{
+                font-family: Outfit-Medium;
+            }
+        }
+        select{
+            border: 1px solid #ed8e23 ;
         }
     }
 }
@@ -229,6 +258,11 @@ nav{
         background-color: #ed8e23;
         border: none;
         color: #fff;
+    }
+    h5{
+        font-size: 22px;
+        font-family: Outfit-Medium;
+        text-align: center;
     }
 }
 
