--- a/CSS/style.css
+++ b/CSS/style.css
@@ -353,6 +353,10 @@ nav button a {
   font-size: 18px;
 }
 
+.thanks p {
+  font-family: Alata-Regular;
+}
+
 footer {
   background-color: #f5f5f5;
 }
